# RM_Auto_Aim

./: README.md
install/: local_setup.sh  setup.sh
install/armor_detector/include/armor_detector/: corner_corrector.hpp  detector_node.hpp  number_classifier.hpp  pnp_solver.hpp  tools.hpp
install/armor_detector/lib/armor_detector/: armor_detector_node  armor_detector_test
install/armor_detector/share/ament_index/resource_index/parent_prefix_path/: armor_detector
install/armor_detector/share/armor_detector/: local_setup.sh  package.sh  package.xml
install/auto_aim_interfaces/share/ament_index/resource_index/parent_prefix_path/: auto_aim_interfaces
install/auto_aim_interfaces/share/auto_aim_interfaces/: local_setup.sh  package.sh
log/: latest_build
src/armor_detector/: CMakeLists.txt
src/armor_detector/include/armor_detector/: armor.hpp  detector.hpp
src/armor_detector/install/: local_setup.sh  setup.sh
src/armor_detector/install/armor_detector/share/armor_detector/: package.sh
src/armor_detector/log/: latest_build
src/armor_detector/src/: corner_corrector.cpp  detector.cpp  detector_node.cpp  number_classifier.cpp  pnp_solver.cpp  tool.cpp
src/armor_detector/test/: test.cpp
src/auto_aim_interfaces/: CMakeLists.txt  package.xml
